<resources>
    <string name="app_name" translatable="false">Notally</string>

    <!-- Fragment Titles -->
    <string name="notes">Notes</string>
    <string name="labels">Labels</string>
    <string name="deleted">Deleted</string>
    <string name="archived">Archived</string>
    <string name="settings">Settings</string>

    <!-- Menu Options -->
    <string name="share">Share</string>
    <string name="filter">Filter</string>
    <string name="search">Search</string>
    <string name="delete">Delete</string>
    <string name="restore">Restore</string>
    <string name="archive">Archive</string>
    <string name="unarchive">Unarchive</string>
    <string name="add_images">Add images</string>
    <string name="delete_all">Delete all</string>
    <string name="record_audio">Record audio</string>
    <string name="set_reminder">Set reminder</string>
    <string name="change_color">Change color</string>
    <string name="make_a_copy">Make a copy</string>
    <string name="delete_forever">Delete forever</string>

    <!-- Search -->
    <string name="previous">Previous</string>
    <string name="next">Next</string>

    <!-- Pinning -->
    <string name="pin">Pin</string>
    <string name="unpin">Unpin</string>
    <string name="pinned">Pinned</string>
    <string name="others">Others</string>

    <!-- Chooser dialog hints -->
    <string name="view_note">View note</string>

    <!-- Dialogs -->
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="cancel">Cancel</string>
    <string name="continue_">Continue</string>
    <string name="open_link">Open link</string>
    <string name="make_list">Make list</string>
    <string name="take_note">Take note</string>
    <string name="add_label">Add label</string>
    <string name="export">Export</string>
    <string name="view_file">View file</string>
    <string name="save_to_device">Save to device</string>
    <string name="edit_label">Edit label</string>
    <string name="label_exists">Label exists</string>
    <string name="delete_label">Delete label?</string>
    <string name="create_new">No labels yet. Create one?</string>
    <string name="delete_all_notes">Delete all notes?</string>
    <string name="delete_selected_notes">Delete selected notes?</string>
    <string name="delete_note_forever">Delete note forever?</string>
    <string name="your_notes_associated">Your notes attached to this label will not be deleted</string>

    <!-- Lists and Notes -->
    <string name="note">Note</string>
    <string name="item">Item</string>
    <string name="date">Date</string>
    <string name="title">Title</string>
    <string name="add_item">Add Item</string>
    <string name="audio_recordings">Audio Recordings</string>
    <string name="drag_handle">Drag Handle</string>
    <string name="bold">Bold</string>
    <string name="link">Link</string>
    <string name="italic">Italic</string>
    <string name="strikethrough">Strikethrough</string>
    <string name="clear_formatting">Clear formatting</string>
    <string name="monospace">Monospace</string>

    <!-- Miscellaneous -->
    <string name="saved_to_device">Saved to device</string>
    <string name="saved_to_notally">Saved to Notally</string>
    <string name="empty_note">Empty note</string>
    <string name="empty_list">Empty list</string>
    <string name="select_labels">Select labels</string>

    <!-- Messages -->
    <string name="cant_open_link">Can’t open link</string>
    <string name="something_went_wrong">Something went wrong. Please try again.</string>
    <string name="install_an_email">Install an email app to send feedback</string>
    <string name="install_a_browser">Install a browser to open this link</string>
    <string name="cant_find_note">Can’t find note. It may have been deleted</string>

    <!-- Settings Page -->
    <string name="appearance">Appearance</string>

    <string name="view">View</string>
    <string name="list">List</string>
    <string name="grid">Grid</string>

    <string name="theme">Theme</string>
    <string name="dark">Dark</string>
    <string name="light">Light</string>
    <string name="follow_system">Follow system</string>

    <string name="date_format">Date format</string>
    <string name="none">None</string>

    <string name="text_size">Text size</string>
    <string name="small">Small</string>
    <string name="medium">Medium</string>
    <string name="large">Large</string>

    <string name="content_density">Content density</string>
    <string name="max_items_to_display">Max items to display in list</string>
    <string name="max_lines_to_display">Max lines to display in note</string>
    <string name="max_lines_to_display_title">Max lines to display in title</string>

    <!-- Backup -->
    <string name="backup">Backup</string>
    <string name="auto_backup">Auto backup</string>
    <string name="tap_to_set_up">Tap to set up</string>
    <string name="notes_will_be">Notes will be backed up to your phone’s internal storage everyday.\n\nThis may not work if you have power saving mode enabled</string>
    <string name="choose_folder">Choose folder</string>
    <string name="disable_auto_backup">Disable auto backup</string>
    <string name="choose_another_folder">Choose another folder</string>
    <string name="cant_find_folder">Can’t find folder. It may have been moved or deleted</string>
    <string name="invalid_backup">Invalid backup</string>
    <string name="imported_backup">Imported backup</string>
    <string name="exporting_backup">Exporting backup</string>
    <string name="importing_backup">Importing backup</string>
    <string name="calculating">Calculating…</string>

    <string name="export_backup">Export backup</string>
    <string name="import_backup">Import backup</string>

    <string name="about">About</string>
    <string name="libraries">Libraries</string>
    <string name="rate">Rate this app</string>
    <string name="send_feedback">Send feedback</string>

    <string name="github" translatable="false">GitHub</string>

    <!-- Widget -->
    <string name="single_note_or_list">Single note or list</string>
    <string name="select_note">Select note</string>

    <!-- Images -->
    <string name="count" translatable="false">%1$d / %2$d</string>
    <string name="adding_images">Adding images</string>
    <string name="deleting_images">Deleting images</string>
    <string name="invalid_image">Invalid image</string>
    <string name="error_while_renaming_image">Error while renaming image</string>
    <string name="image_format_not_supported">Image format not supported</string>
    <string name="delete_image_forever">Delete image forever?</string>
    <string name="cant_load_image">Can’t load image. It may have been moved or deleted</string>
    <string name="unknown_name">Unknown name</string>
    <string name="unknown_error">Unknown error</string>
    <string name="insert_an_sd_card_images">Insert an SD card to add images</string>

    <plurals name="cant_add_images">
        <item quantity="one">Can’t add %d image</item>
        <item quantity="other">Can’t add %d images</item>
    </plurals>

    <!-- Audio -->
    <string name="play">Play</string>
    <string name="stop">Stop</string>
    <string name="start">Start</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="paused">Paused</string>
    <string name="recording">Recording…</string>
    <string name="ready_to_record">Ready to record</string>
    <string name="discard">Discard</string>
    <string name="save_recording">Save recording?</string>
    <string name="delete_audio_recording_forever">Delete audio recording forever?</string>
    <string name="tap_for_more_options">Tap for more options</string>
    <string name="to_record_audio">To record audio, allow Notally access to your microphone. Tap Settings > Permissions and turn Microphone on</string>
    <string name="please_grant_notally_audio">Please grant Notally the permission to record audio. Recordings never leave your device</string>
    <string name="insert_an_sd_card_audio">Insert an SD card to record audio</string>
    <string name="something_went_wrong_audio">Something went wrong. The audio recording may have been moved or deleted.\n\nError : (%1$d, %2$d)</string>

    <!-- Reminder -->
    <string name="time">Time</string>
    <string name="select_frequency">Select frequency</string>
    <string name="does_not_repeat">Does not repeat</string>
    <string name="daily">Daily</string>
    <string name="monthly">Monthly</string>
    <string name="repeats_daily">%1$s, Repeats daily</string>
    <string name="repeats_monthly">%1$s, Repeats monthly</string>
    <string name="please_grant_notally_notification">Please grant Notally the permission to send notifications</string>
    <string name="please_grant_notally_alarm">Please grant Notally the permission to set alarms</string>
    <string name="channel_backups_images">Backups and Images</string>
    <string name="channel_reminders">Reminders</string>
    <string name="channel_recordings">Audio Recordings</string>
</resources>