<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/DrawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <RelativeLayout
        android:id="@+id/RelativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/Toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:contentInsetEnd="16dp">

            <EditText
                android:id="@+id/EnterSearchKeyword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/search"
                android:inputType="textFilter"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textAppearance="?attr/textAppearanceBody1"
                android:visibility="gone" />

        </com.google.android.material.appbar.MaterialToolbar>

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/ActionMode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/Toolbar"
            app:navigationIcon="?attr/homeAsUpIndicator" />

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/NavHostFragment"
            android:name="androidx.navigation.fragment.NavHostFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/ActionMode"
            app:defaultNavHost="true"
            app:navGraph="@navigation/navigation" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/MakeList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/TakeNote"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/make_list"
            android:tooltipText="@string/make_list"
            app:backgroundTint="?attr/alternateFabBackground"
            app:elevation="2dp"
            app:pressedTranslationZ="4dp"
            app:srcCompat="@drawable/checkbox"
            app:tint="?attr/alternateFabTint" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/TakeNote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/take_note"
            android:tooltipText="@string/take_note"
            app:shapeAppearanceOverlay="@style/RoundedRectangle"
            app:srcCompat="@drawable/edit" />

    </RelativeLayout>

    <com.omgodse.notally.view.NavigationView
        android:id="@+id/NavigationView"
        android:layout_width="280dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:cardCornerRadius="0dp"
        app:cardElevation="16dp">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/LinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:text="@string/app_name"
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    android:textColor="?attr/colorPrimary" />

                <com.omgodse.notally.view.NavigationViewItem
                    android:id="@+id/Notes"
                    style="@style/Button.NavigationView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/notes"
                    app:icon="@drawable/home" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginVertical="8dp"
                    android:background="?android:attr/listDivider" />

                <com.omgodse.notally.view.NavigationViewItem
                    android:id="@+id/Labels"
                    style="@style/Button.NavigationView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/labels"
                    app:icon="@drawable/label" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginVertical="8dp"
                    android:background="?android:attr/listDivider" />

                <com.omgodse.notally.view.NavigationViewItem
                    android:id="@+id/Deleted"
                    style="@style/Button.NavigationView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/deleted"
                    app:icon="@drawable/delete" />

                <com.omgodse.notally.view.NavigationViewItem
                    android:id="@+id/Archived"
                    style="@style/Button.NavigationView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/archived"
                    app:icon="@drawable/archive" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginVertical="8dp"
                    android:background="?android:attr/listDivider" />

                <com.omgodse.notally.view.NavigationViewItem
                    android:id="@+id/Settings"
                    style="@style/Button.NavigationView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/settings"
                    app:icon="@drawable/settings" />

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </com.omgodse.notally.view.NavigationView>

</androidx.drawerlayout.widget.DrawerLayout>