<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/ImageView"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_centerInParent="true"
        app:tint="?attr/colorPrimary" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/RecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/RadioGroup"
        android:clipToPadding="false"
        android:paddingStart="4dp"
        android:paddingTop="8dp"
        android:paddingEnd="4dp"
        android:scrollbarStyle="outsideOverlay"
        android:scrollbars="vertical" />

    <RadioGroup
        android:id="@+id/RadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingHorizontal="16dp"
        android:paddingVertical="12dp"
        android:visibility="gone">

        <RadioButton
            android:id="@+id/Notes"
            style="@style/RadioButton.Chip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/notes" />

        <RadioButton
            android:id="@+id/Deleted"
            style="@style/RadioButton.Chip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/deleted" />

        <RadioButton
            android:id="@+id/Archived"
            style="@style/RadioButton.Chip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/archived" />

    </RadioGroup>

</RelativeLayout>