<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/Toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:navigationIcon="?attr/homeAsUpIndicator" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/Toolbar"
        android:fillViewport="true"
        android:theme="@style/Colorless">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:orientation="vertical"
            android:paddingBottom="16dp">

            <EditText
                android:id="@+id/EnterTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/title"
                android:imeOptions="actionNext"
                android:inputType="textMultiLine|textCapSentences"
                android:paddingStart="24dp"
                android:paddingTop="16dp"
                android:paddingEnd="24dp"
                android:textAppearance="?attr/textAppearanceHeadline6" />

            <TextView
                android:id="@+id/DateCreated"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="24dp"
                android:paddingTop="16dp"
                android:paddingEnd="24dp"
                android:paddingBottom="16dp"
                android:text="@string/date"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="?android:textColorHint" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />

            <com.omgodse.notally.OverflowEditText
                android:id="@+id/EnterBody"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/note"
                android:inputType="textMultiLine|textCapSentences"
                android:paddingStart="24dp"
                android:paddingTop="16dp"
                android:paddingEnd="24dp"
                android:paddingBottom="16dp"
                android:textAppearance="?attr/textAppearanceBody1" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/RecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:overScrollMode="never"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

            <TextView
                android:id="@+id/AddItem"
                style="@style/TextView.Clickable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:drawablePadding="12dp"
                android:gravity="center_vertical"
                android:paddingStart="20dp"
                android:paddingTop="12dp"
                android:paddingEnd="20dp"
                android:paddingBottom="12dp"
                android:text="@string/add_item"
                android:textAppearance="?attr/textAppearanceSubtitle2"
                android:textColor="?android:textColorHint"
                app:drawableStartCompat="@drawable/add"
                app:drawableTint="?android:textColorHint" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/LabelGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="24dp"
                android:paddingEnd="24dp" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</RelativeLayout>